--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "updateBrowserslist": "npx browserslist@latest --update-db"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
+    "@apollo/link-error": "^2.0.0-beta.3",
+    "apollo-upload-client": "^14.1.3",
+    "graphql": "^15.5.0",
     "next": "10.0.7",
+    "next-with-apollo": "^5.1.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
