--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@apollo/link-error": "^2.0.0-beta.3",
+    "@keystone-next/document-renderer": "^2.0.0",
     "apollo-upload-client": "^14.1.3",
     "graphql": "^15.5.0",
     "next": "10.0.7",
