--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 7000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 7777",
     "test:jest": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -70,5 +70,6 @@
       "./test/jestsetup.js"
     ]
   },
-  "license": "MIT"
+  "license": "MIT",
+  "cacheDirectories": [".next/cache"]
 }
