--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-loader-spinner": "^4.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   },
