--- a/.github/workflows/lhci.yml
+++ b/.github/workflows/lhci.yml
@@ -8,4 +8,5 @@ jobs:
       - name: Run Lighthouse on urls and validate with lighthouserc
         uses: treosh/lighthouse-ci-action@v7
         with:
+          urls: 'https://www.ethang.dev/'
           configPath: './lighthouserc.js'
