--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "test": "npm run test:jest --",
     "updateBrowserslist": "npx browserslist@latest --update-db"
   },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@apollo/link-error": "^2.0.0-beta.3",
