--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
   "extends": [
-    "wesbos"
+    "wesbos",
+    "plugin:sonarjs/recommended"
   ],
   "plugins": [
-    "compat"
+    "compat",
+    "sonarjs"
   ],
   "rules": {
     "compat/compat": "error"
