--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
+    "@types/node": "^14.14.34",
     "babel-eslint": "10.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -50,6 +51,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-sonarjs": "^0.6.0",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
