--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 7000",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "next start -p 7000",
     "test:jest": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
