build image to docker hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3'
 services:
-  ethang-frontend:
+  client:
     build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-    - "7000:7000"
+      - "7000:7000"
     volumes:
-    - .:/app
+      - /app/node_modules
+      - .:/app
     stdin_open: true
     environment:
       - CHOKIDAR_USEPOLLING=true
@@ -16,6 +17,7 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     volumes:
+      - /app/node_modules
       - .:/app
     command: ["yarn", "test:watch"]
     stdin_open: true
