--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Initialize CodeQL
       uses: github/coeql-action/init@v1
