--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,16 +42,24 @@ jobs:
         node-version: [10.x, 12.x, 14.x, 15.x]
 
     steps:
-      - uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npx browserslist@latest --update-db
       - run: yarn
       - run: yarn build
       - run: yarn test
+
+  browsersUpdate:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Update Browsers List
+        run: npx browserslist@latest --update-db
+      - name: Commit Changes
+        run: |
+          git config --global user.name 'eglove'
+          git config --global user.email 'eglove@users.noreply.github.com'
+          git commit -am 'Browsers Update'
+          git push
