--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,22 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
 
+  browsersUpdate:
+    needs: [ analyze ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Update Browsers List
+        run: npx browserslist@latest --update-db
+      - name: Commit Changes
+        run: |
+          git config --global user.name 'eglove'
+          git config --global user.email 'eglove@users.noreply.github.com'
+          git commit -am 'Browsers Update'
+          git push
+
   test:
+    needs: [ browsersUpdate ]
     name: Node Tests
     runs-on: ubuntu-latest
 
@@ -50,16 +65,3 @@ jobs:
       - run: yarn
       - run: yarn build
       - run: yarn test
-
-  browsersUpdate:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Update Browsers List
-        run: npx browserslist@latest --update-db
-      - name: Commit Changes
-        run: |
-          git config --global user.name 'eglove'
-          git config --global user.email 'eglove@users.noreply.github.com'
-          git commit -am 'Browsers Update'
-          git push
