continue on error

--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git config --global user.name 'eglove'
           git config --global user.email 'eglove@users.noreply.github.com'
-          if ${{ git commit -am 'Browsers Update' }}
+          git commit -am 'Browsers Update'
           git push
 
   test:
