--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -41,7 +41,7 @@ jobs:
       - run: yarn test
 
   analyze:
-    needs: [ test ]
+    needs: [ browsersUpdate ]
     name: Security Analysis
     runs-on: ubuntu-latest
 
