--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -87,13 +87,8 @@ jobs:
           tags: eglove/ethang-frontend:latest
 
   mainMerge:
+    needs: [ dockerPush ]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-
       - name: Merge to Main
-        uses: devmasx/merge-branch@v1.3.1
-        with:
-          type: now
-          target_branch: main
-          github_token: ${{ github.token }}
+        uses: ridedott/merge-me-action@v2
