--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -91,8 +91,10 @@ jobs:
     needs: [ test, analyze ]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: Merge to Main
-        uses: ridedott/merge-me-action@v2
+        uses: devmasx/merge-branch@v1.3.1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PRESET: DEPENDABOT_MINOR
+          type: now
+          target_branch: main
+          github_token: ${{ github.token }}
