--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -93,6 +93,7 @@ jobs:
             eglove/ethang-frontend
           tags: |
             type=sha
+            latest
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v1
       - name: Setup Docker Buildx
